# flaude

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TODOS.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  seed.yaml  sitemap.xml
.claude/skills/release/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  docs.yml  publish.yml
api/app-machine/: index.html
api/concurrent/: index.html
api/configuration/: index.html
api/errors/: index.html
api/execution/: index.html
api/image/: index.html
api/log-infrastructure/: index.html
api/sessions/: index.html
api/volumes/: index.html
changelog/: index.html
concepts/architecture/: index.html
concepts/log-drain/: index.html
docs/: changelog.md  getting-started.md  index.md  llms.txt  memo.md  overview.md
docs/api/: app-machine.md  concurrent.md  configuration.md  errors.md  execution.md  image.md  log-infrastructure.md  sessions.md  volumes.md
docs/concepts/: architecture.md  log-drain.md
docs/guide/: building-on-flaude.md  concurrent.md  docker-image.md  error-handling.md  private-repos.md  sessions.md  streaming.md
flaude/: Dockerfile  __init__.py  app.py  entrypoint.sh  executor.py  fly_client.py  image.py  lifecycle.py  log_drain.py  machine.py  machine_config.py  runner.py  session.py  volume.py
getting-started/: index.html
guide/building-on-flaude/: index.html
guide/concurrent/: index.html
guide/docker-image/: index.html
guide/error-handling/: index.html
guide/private-repos/: index.html
guide/sessions/: index.html
guide/streaming/: index.html
overview/: index.html
scripts/: release.sh
search/: search_index.json
tests/: conftest.py  test_app.py  test_concurrent_integration.py  test_e2e.py  test_entrypoint.py  test_executor.py  test_exit_code_propagation.py  test_failure_logs.py  test_image.py  test_lifecycle.py  test_log_drain.py  test_log_payload_parsing.py  test_log_stream.py  test_machine.py  test_machine_cleanup_guarantee.py  test_machine_config.py  test_machine_create_config.py  test_prompt_execution.py  test_runner.py  test_session.py  test_startup_env.py  test_volume.py  test_workspace_manifest.py
thoughts/plans/: 2026-03-26-oss-requirements.md  2026-03-28-release-skill.md  2026-03-28-stream-json-output.md  2026-03-30-serverless-sessions.md  2026-03-30-workspace-manifest.md
thoughts/research/: 2026-03-25-documentation-strategy.md  2026-03-25-e2e-validation-automation.md  2026-03-25-oss-requirements.md  2026-03-30-serverless-claude-sessions.md
