[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flaude"
version = "0.1.0"
description = "Spin up Fly.io machines to execute Claude Code prompts"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.hatch.build.targets.wheel]
packages = ["flaude"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not e2e'"
markers = [
    "e2e: real Fly.io integration tests (require FLY_API_TOKEN and CLAUDE_CODE_OAUTH_TOKEN)",
]
