[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flaude"
version = "0.6.1"
description = "Spin up Fly.io machines to execute Claude Code prompts"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "flaude contributors"},
]
keywords = ["fly.io", "claude", "claude-code", "ai", "llm", "automation", "ephemeral"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1",
]

[project.urls]
Homepage = "https://github.com/ravi-hq/flaude"
Documentation = "https://ravi-hq.github.io/flaude"
Repository = "https://github.com/ravi-hq/flaude"
"Bug Tracker" = "https://github.com/ravi-hq/flaude/issues"
Changelog = "https://github.com/ravi-hq/flaude/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "mypy>=1.8",
    "ruff>=0.3",
    "coverage[toml]>=7",
    "bandit[toml]>=1.7",
    "pre-commit>=3",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["flaude"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not e2e'"
markers = [
    "e2e: real Fly.io integration tests (require FLY_API_TOKEN and CLAUDE_CODE_OAUTH_TOKEN)",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["flaude"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.bandit]
targets = ["flaude"]

[tool.hatch.envs.docs]
features = ["docs"]

[tool.hatch.envs.docs.scripts]
serve = "mkdocs serve --dev-addr localhost:8000"
build = "mkdocs build --strict"
deploy = "mkdocs gh-deploy --force"
